--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,2 +1,6 @@
 
-@media screen and (max-width:767px){ }
+@media screen and (max-width:1023px){}
+@media screen and (max-width:767px){
+    main .container .bottom .text_top{flex-flow: column;}
+    main .container .bottom .text_top .area{margin-bottom: 20px;}
+}
